kube/deployment-local-kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-config-service
  labels:
    app: db-config-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: db-config-service
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db-config-service-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: db-config-service
        version: v1
    spec:
      containers:
        - name: db-config-service
          image: db-config-image:0.5
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
