kube/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mysql-service
spec:
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 3306
          targetPort: 3306
---
apiVersion: v1
kind: Endpoints
metadata:
    name: mysql-service
subsets:
    - addresses:
        - ip: 11.48.64.49
      ports:
        - port: 3306
