kube/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: db-config-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: db-config-service
spec:
  hosts:
  - "*"
  gateways:
  - db-config-service-gateway
  http:
  - match:
    - uri:
        prefix: /db-config-server
    route:
    - destination:
        host: db-config-service
